# SNP_project_codes

./: EDA for Synthetic Data.ipynb  LICENSE  README.md  pyproject.toml
src/data_analysis/: eda.py
src/snp/: dlinear_analysis.py  eda.py
synthetic_data/: AmpNoise-Mean0-Slope0p1-Std0p7292.csv  Deterministic.csv  FreqNoise-Mean0-Slope0p1-Std0p1333.csv  FreqNoise-Mean0-Std0p19.csv  PhaseNoise-Mean0-Slope0p1-Std1p0208.csv  PhaseNoise-Mean0-Std0p6848.csv  WhiteNoiseTimeSeries.csv
synthetic_data_notrend/: AmpNoise-Mean0-Std0p5326.csv  Deterministic-Mean0std0p0.csv  WhiteNoiseTimeSeries.csv
