[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "snp"
authors = [
    {name = "Ruoyu Chen", email = "rchen2@mail.yu.edu"},
    {name = "Zhengnan Li", email = "zli6@mail.yu.edu"},
    {name = "Niranjan Kumar Kishore Kumar", email = "nkishore@mail.yu.edu"},
    {name = "more2update", email = "more2update"}

]
maintainers = [
    {name = "Ruoyu Chen", email = "rchen2@mail.yu.edu"},
    {name = "Zhengnan Li", email = "zli6@mail.yu.edu"},
    {name = "more2update", email = "more2update"}
]
description = "Codes for S&P project"
readme = "README.md"
keywords = ["data visualization", "Data Analysis"]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.20",
    "pandas>=1.4",
    "seaborn>=0.13.0",
    "SCIPY>=1.3",
    "PATSY>=0.5",
    "STATSMODELS>=0.11"
]
version="0.1"

[project.urls]
Repository = "https://github.com/Zhengnan817/Final-Project-Carbon-emission"


[tool.setuptools.packages.find]
where = ["src"]